# AgentForge

./: .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
CODE_REVIEW/: index.html
contributing/: index.html
docs/: CODE_REVIEW.md  contributing.md  index.md
docs/examples/: custom-tools.md  index.md  otel-tracing.md  parallel-supervisor.md  persistent-rag.md  policy-governance.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: governance.md  memory.md  observability.md  providers.md  tools.md
docs/reference/: api.md  changelog.md  configuration.md
examples/: enterprise_governance.py  index.html  otel_tracing.py  policy_governance.py  quickstart.py  rag.py  rag_persistent.py  rag_pgvector.py  tool_use.py
examples/custom-tools/: index.html
examples/otel-tracing/: index.html
examples/parallel-supervisor/: index.html
examples/persistent-rag/: index.html
examples/policy-governance/: index.html
forge/: __init__.py  _version.py  config.py  exceptions.py  types.py
forge/agents/: __init__.py  agent.py  base.py  supervisor.py
forge/cli/: __init__.py  console.py  main.py
forge/compliance/: __init__.py  audit.py  redaction.py
forge/governance/: __init__.py  policy.py
forge/memory/: __init__.py  base.py  conversation.py  pgvector.py  sqlite.py  vector.py
forge/models/: __init__.py  base.py  registry.py  router.py
forge/models/providers/: __init__.py  anthropic.py  bedrock.py  echo.py  ollama.py  openai.py
forge/observability/: __init__.py  events.py  logging.py  otel.py  usage.py
forge/orchestration/: __init__.py  context.py  orchestrator.py
forge/security/: __init__.py  access.py  sandbox.py  sanitization.py
forge/tools/: __init__.py  base.py  registry.py
forge/tools/builtin/: __init__.py  calculator.py  http.py  time.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/governance/: index.html
guides/memory/: index.html
guides/observability/: index.html
guides/providers/: index.html
guides/tools/: index.html
reference/api/: index.html
reference/changelog/: index.html
reference/configuration/: index.html
scripts/: bump_version.py
search/: search_index.json
tests/: conftest.py  test_agents.py  test_audit.py  test_audit_robustness.py  test_bedrock_provider.py  test_config_security.py  test_config_validation.py  test_http_security.py  test_memory.py  test_models.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_otel.py  test_parallel_workers.py  test_pgvector_memory.py  test_policy_governance.py  test_security.py  test_sqlite_concurrency.py  test_sqlite_memory.py  test_streaming.py  test_tools.py  test_types.py
